# delver-sorter

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini  update_requirements.sh
src/delver_sorter/: __init__.py  output.tmpl.html
tests/unit/: test_main.py
