[project]
name = "delver_sorter"
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
# this is to accommodate the use of pip-tools and allow defining deps in files
# see: https://github.com/jazzband/pip-tools#requirements-from-pyprojecttoml
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 88 # default

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = ["--strict-markers"] # fail on unknown markers
markers = [
    "slow: marks slow tests. Run using --runslow",
    "integration: marks tests involving external services. Run using --runint",
]

# pytest cov config
[tool.coverage.run]
command_line = "-m pytest tests"
## omit test dir
omit = ["tests/*"]
relative_files = true
branch = true

[tool.coverage.paths]
# below dirs will be treated as equivalent
# allows package to be installed in a few ways and report coverage correctly
source = ["src/", ".tox/**/site-packages/", ".venv/**/site-packages/"]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
exclude = ["build/*", "airflow/*"]
# don't allow implicit package paths.
# useful so we don't accidentally import in the wrong way e.g. test files
namespace_packages = false
# below is explicitly marking the mypy --strict flag checks
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# so we don't need to type all our test with `-> None`
disallow_untyped_defs = false
disallow_incomplete_defs = false
